feat: add the theme change function in settings

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -13,13 +13,13 @@ a {
   color: inherit;
 }
 
-:root {
+.dark {
   --background-blur-color: rgba(0, 0, 0, 0.3);
   --background-color: rgba(28, 28, 28, 1);
   --text-color: white;
 }
 
-.dark-mode {
+.light {
   --background-blur-color: rgba(255, 255, 255, 0.3);
   --background-color: rgba(240, 240, 240, 1);
   --text-color: black;
